// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-comment-event Renders \`create-comment-event\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Add comment
      </span>
    </div>
     
    <div
      class="text"
    >
      <div
        class="layout column"
      >
        <!---->
        <c-name-field
          label="Comment"
          name="comment"
          required="required"
        />
      </div>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Save changes
        </div>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-comment-event Renders \`create-comment-event\` with items 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Add comment
      </span>
    </div>
     
    <div
      class="text"
    >
      <div
        class="layout column"
      >
        <alarm-general-table-stub
          items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
        />
        <hr
          class="my-3 v-divider theme--light"
        />
        <c-name-field
          label="Comment"
          name="comment"
          required="required"
        />
      </div>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Save changes
        </div>
      </button>
    </div>
  </div>
</form>
`;
